RESOLVED FIXED98882
[WK2][SOUP] ResourceError.isCancellation() is not carried over IPC
https://bugs.webkit.org/show_bug.cgi?id=98882
Summary [WK2][SOUP] ResourceError.isCancellation() is not carried over IPC
Chris Dumez
Reported 2012-10-10 03:49:54 PDT
ResourceError.isCancellation() is not carried over IPC (not serialized / deserialized). However, this is used by EFL port in UIProcess, for ewk_error.
Attachments
Patch (3.27 KB, patch)
2012-10-10 03:53 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2012-10-10 03:53:09 PDT
WebKit Review Bot
Comment 2 2012-10-10 04:14:36 PDT
Comment on attachment 167972 [details] Patch Clearing flags on attachment: 167972 Committed r130885: <http://trac.webkit.org/changeset/130885>
WebKit Review Bot
Comment 3 2012-10-10 04:14:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.