[WK2][SOUP] ResourceError.isCancellation() is not carried over IPC https://bugs.webkit.org/show_bug.cgi?id=98882

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-10-10
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Properly serialize / deserialize ResourceError.isCancellation
boolean so that it can be used in UIProcess.

* Shared/soup/WebCoreArgumentCodersSoup.cpp:
(CoreIPC::::encode):
(CoreIPC::::decode):

Tools:

Do not display the error page in MiniBrowser if the loading
error corresponds to a cancellation.

* MiniBrowser/efl/main.c:
(on_error):

Canonical link: https://commits.webkit.org/116863@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130885 268f45cc-cd09-0410-ab3c-d52691b4dbfc