Source/WebKit2/Shared/soup/WebCoreArgumentCodersSoup.cpp
@@ -192,6 +192,7 @@ void ArgumentCoder<ResourceError>::encode(ArgumentEncoder* encoder, const Resour
     encoder->encode(resourceError.errorCode());
     encoder->encode(resourceError.failingURL());
     encoder->encode(resourceError.localizedDescription());
+    encoder->encode(resourceError.isCancellation());
 }
 
 bool ArgumentCoder<ResourceError>::decode(ArgumentDecoder* decoder, ResourceError& resourceError)
@@ -220,7 +221,13 @@ bool ArgumentCoder<ResourceError>::decode(ArgumentDecoder* decoder, ResourceErro
     if (!decoder->decode(localizedDescription))
         return false;
 
+    bool isCancellation;
+    if (!decoder->decode(isCancellation))
+        return false;
+
     resourceError = ResourceError(domain, errorCode, failingURL, localizedDescription);
+    resourceError.setIsCancellation(isCancellation);
+
     return true;
 }
 
