Tools/MiniBrowser/efl/main.c
@@ -255,6 +255,10 @@ on_error(void *user_data, Evas_Object *webview, void *event_info)
     Eina_Strbuf* buffer;
     const Ewk_Error *error = (const Ewk_Error *)event_info;
 
+    /* This is a cancellation, do not display the error page */
+    if (ewk_error_cancellation_get(error))
+        return;
+
     buffer = eina_strbuf_new();
     eina_strbuf_append_printf(buffer, "<html><body><div style=\"color:#ff0000\">ERROR!</div><br><div>Code: %d<br>Description: %s<br>URL: %s</div></body</html>",
         ewk_error_code_get(error), ewk_error_description_get(error), ewk_error_url_get(error));
